--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 VITE_BASE_URL=https://backend-0sbi.onrender.com
-VITE_TG_USERNAME=HK_Moviespot_bot
+VITE_TG_USERNAME=Jajsnbsbdbdb_bot
 VITE_SITENAME=Hk-moviespot
 VITE_TG_URL=https://t.me/TG_BOTS_UPDATE
 VITE_TOKEN_SYSTEM=False
 VITE_SHORTNER_TIME=24
 VITE_SITEKEY=0x4AAAAAABltLqsKQiMB1c54
 VITE_WORKERURL=https://fancy-resonance-797f.harikushal234.workers.dev
+VITE_API_KEY=97d2f5bd7e9c0599b87d54f375259515950c82f9
+VITE_API_URL=https://pocolinks.com/api
